# spire-agent

./: README.md
agent/: Dockerfile  agent.py  config.kubernetes.yaml  config.yaml  demo_workload_manager.py  docker-compose.yml  log_viewer.py  pyproject.toml  requirements.txt  setup.py
agent/icp_agent/: __init__.py  __main__.py  cache.py  certificate_lifecycle.py  grpc_workload_api.py  grpc_workload_client.py  health_monitor.py  main.py  workload_api.py  workload_manager.py
agent/icp_agent/api/: __init__.py  app.py  workload.proto  workload_pb2.py  workload_pb2_grpc.py
agent/icp_agent/attestation/: __init__.py  base.py  docker.py  kubernetes.py  unix.py
agent/icp_agent/client/: __init__.py  icp_client.py
agent/icp_agent/config/: __init__.py  settings.py
agent/icp_agent/core/: __init__.py  health.py  lifecycle.py  node_attestation.py
agent/icp_agent/crypto/: __init__.py  cert_utils.py  csr.py
agent/icp_agent/log_config/: __init__.py  logger.py
agent/icp_agent/plugins/: __init__.py  base.py  docker_plugin.py  kubernetes_plugin.py  unix_plugin.py
charts/spire-agent/: Chart.yaml  values.yaml
charts/spire-agent/templates/: _helpers.tpl  configmap.yaml  daemonset.yaml  rbac.yaml  serviceaccount.yaml
docker/: .env.example  config.docker.yaml  docker-compose.yml
manifests/: spire-agent-daemonset.yaml
unix/: agent.env.example  config.unix.yaml  install.sh  spire-agent.service  uninstall.sh
